--- a/isla/index-ru.html
+++ b/isla/index-ru.html
@@ -40,9 +40,9 @@
         <a class="translated-text navmenu" key="g5" href="#block5">Где купить</a>
         <a class="translated-text navmenu  lang" key="g6" href="index.html">ua</a>
     </div>
-    <!--    <a class="instruction" href="./instruction.pdf"-->
-    <!--    ><p class="translated-text" key="instruction">Iнструкцiя</p></a-->
-    <!--    >-->
+        <a class="instruction" href="./instruction.pdf"
+        ><p class="translated-text" key="instruction">Инструкция</p></a
+        >
 </div>
 
 <!--  content-->
