--- a/bioelektra/index-pre.html
+++ b/bioelektra/index-pre.html
@@ -23,20 +23,20 @@
         <div id="menuToggle">
             <input type="checkbox"/> <span></span> <span></span> <span></span>
             <ul id="menu">
-                <li><a class="translated-text navmenu active" key="g1" href="index.html">Магній</a></li>
-                <li><a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a></li>
+                <li><a class="translated-text navmenu" key="g1" href="index.html">Магній</a></li>
+                <li><a class="translated-text navmenu active" key="g2" href="index-pre.html">Вагiтнiсть</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="index-str.html">Стресс</a></li>
-<!--                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>-->
+                <!--                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>-->
                 <li><a class="translated-text navmenu lang" key="g6" href="#map">ru</a></li>
-<!--                <li><a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a></li>-->
-<!--                <li><a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a></li>-->
+                <!--                <li><a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a></li>-->
+                <!--                <li><a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a></li>-->
             </ul>
         </div>
     </div>
     <div class="desctop-navigation">
-        <a class="translated-text navmenu active" key="g1" href="index.html">Магній</a>
-        <a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a>
+        <a class="translated-text navmenu" key="g1" href="index.html">Магній</a>
+        <a class="translated-text navmenu active" key="g2" href="index-pre.html">Вагiтнiсть</a>
         <a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a>
         <a class="translated-text navmenu" key="g4" href="index-str.html">Стресс</a>
 <!--        <a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a>-->
@@ -52,79 +52,99 @@
 <!--  content-->
 <a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">КУПИТИ ЗА ВИГІДНОЮ ЦІНОЮ</a>
 
-<div class="block-1 block-1_main">
-<!--    <div class="block-1__content">-->
-<!--        <div class="content-container">-->
-<!--            <div class="content">-->
-<!--                <p><b>БІОЛЕКТРА</b> – для нормальної-->
-<!--                    вагітності, народження і-->
-<!--                    розвитку здорової дитини!</p>-->
-<!--                <div class="content-img"></div>-->
-<!--                <div class="text-2">-->
-<!--                    <p class="germ">Зроблено в Німеччині</p>-->
-<!--                    <p class="sub-text">Додаткове джерело магнію.</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="block-1__img"></div>-->
+<div class="block-1">
+    <div class="block-1__content">
+        <div class="content-container">
+            <div class="content">
+                <p><b>БІОЛЕКТРА</b> – для нормальної
+                    вагітності, народження і
+                    розвитку здорової дитини!</p>
+                <div class="content-img"></div>
+                <div class="text-2">
+                    <p class="germ">Зроблено в Німеччині</p>
+                    <p class="sub-text">Додаткове джерело магнію.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="block-1__img"></div>
     <div class="block-1__bottom">
         <img src="images/shap1.png">
     </div>
 </div>
 
-<div class="pack-main-text">
-    <div class="pack-main_img"></div>
-    <p>Магній - один з життєво необхідних хімічних елементів. Він є складовою частиною абсолютно всіх тканин і клітин
-        організму людини. Це незамінний мікроелемент, споживання якого необхідно забезпечувати щодня. Німецьким
-        товариством харчування (DGE) в якості добової норми споживання магнію для підлітків і дорослих рекомендовано
-        300-400 мг магнію<sup>1</sup>
-    </p>
+
+
+<div class="block block-2">
+    <div class="block-2__container">
+        <div class="block-2__plate">В 2 рази знижує частоту невиношування<sup>2</sup></div>
+        <div class="block-2__plate">Зручно приймати: лише 1 раз на день<sup>1</sup></div>
+        <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>
+        <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>
+    </div>
 </div>
-
-
-
-<!--<div class="block block-2">-->
-<!--    <div class="block-2__container">-->
-<!--        <div class="block-2__plate">В 2 рази знижує частоту невиношування<sup>2</sup></div>-->
-<!--        <div class="block-2__plate">Зручно приймати: лише 1 раз на день<sup>1</sup></div>-->
-<!--        <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>-->
-<!--        <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>-->
-<!--    </div>-->
-<!--</div>-->
 <a name="block1"></a>
 
 <div class="block block-3">
-    <div class="block-3__container block-3__container-ru">
+    <div class="block-3__container">
         <div class="container">
             <div class="container__img"></div>
             <div class="container__title"><p>Для майбутніх мам</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>Магній недарма називають головним "жіночим" мінералом, адже він не лише забезпечує красу шкіри та волосся, а й безпосередньо впливає на жіночу репродуктивну функцію. Дефіцит цього макроелемента призводить до порушень гормонального фону та, відповідно, менструального циклу, депресій та дратівливості. Подбати про достатній вміст магнію в організмі необхідно ще на стадії планування вагітності.
+                </p>
+            </div>
         </div>
         <div class="container">
             <div class="container__img"></div>
-            <div class="container__title"><p>При занятті спортом</p></div>
+            <div class="container__title"><p>Під час вагітності</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>Виношування дитини – це не лише очікування маленького дива, а й величезна відповідальність. Адже від здоров'я жінки залежить протікання вагітності та здоров'я майбутнього малюка. У період вагітності організм особливо потребує вітамінів та корисних мікроелементів. Біолектра ефективно запобігає дефіциту магнію, основна роль якого – нормалізувати тонус матки.
+                </p>
+            </div>
         </div>
         <div class="container">
             <div class="container__img"></div>
-            <div class="container__title"><p>При стресі</p></div>
+            <div class="container__title"><p>При годуванні*</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>Пологи позаду, і разом із щастям материнства породілля відчуває страшенну втому. Організм жінки виснажений, адже він віддав частину корисних речовин дитині. Тепер головне – повернути собі міцний імунітет та наділити ним малюка через грудне молоко. А для цього доведеться компенсувати дефіцит вітамінів та мікроелементів, і в першу чергу це стосується магнію.
+                </p>
+            </div>
         </div>
     </div>
 </div>
 <a name="block2"></a>
 
 
-
+<div class="block block-4">
+    <p>Як діє Біолектра</p>
+    <p>при дефіциті магнію<sup>2</sup></p>
+    <div class="block-4__container">
+        <div class="container__img"></div>
+        <div class="container__list">
+            <ul>
+                <li>Знижує ймовірність акушерських та соматичних ускладнень<sup>2</sup></li>
+                <li>Зменшує ризик народження недоношеної дитини<sup>3</sup></li>
+                <li>Знижує загрозу переривання вагітності<sup>2</sup></li>
+                <li>Сприяє нормалізації тонуса матки<sup>4, 5</sup></li>
+                <li>Сприяє швидкому регресу больових відчуттів у вагітних<sup>4, 5</sup></li>
+                <li>Поліпшує матково-плацентарний кровообіг<sup>4, 5</sup></li>
+                <li>Сприяє зменшенню перинатальних уражень нервової системи дитини<sup>3</sup></li>
+            </ul>
+        </div>
+    </div>
+</div>
 <a name="block4"></a>
 
 
 <div class="block block-5">
-    <p>Знайди сфою форму Біолектри:</p>
+    <p>Форми Біолектри</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
@@ -210,70 +230,19 @@
     </div>
 </div>
 
-<div class="block-main_mag">
-    <h2>Магній та:</h2>
-    <div class="mag-plate">
-        <b>нервова система</b>
-        <p>
-        Коливання настрою, дратівливість та нервозність можуть бути наслідком недостатнього споживання магнію. Адже магній важливий для нормального функціонування нервової системи та має заспокійливу дію.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>здоров’я зубів та кісток</b>
-        <p>
-        Депо магнію в організмі людини становить близько 25 грам. Основна його частка - а саме 60% - знаходиться в
-        кістках та зубах. Тільки 39% знаходиться в м'язах та органах, приблизно 1% - в крові. Отже, достатнє вживання
-        магнію необхідно для підтримки кісток і зубів в здоровому стані<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>ПМС</b>
-        <p>
-        Достатнє споживання магнію може полегшити типові симптоми ПМС. Магній сприяє розслабленню мускулатури матки і, таким чином, може запобігти болю в животі перед і під час менструації<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>цукровий діабет</b>
-        <p>
-        Безліч досліджень показують, що у пацієнтів з діабетом 2-го типу концентрація магнію в крові знижена. Внаслідок
-        підвищеного рівня цукру в крові, відбувається посилене виведення магнію нирками, що є основною причиною
-        нестачі магнію в організмі. Крім того, хворі на діабет часто уникають споживання багатої вуглеводами їжі: зернові
-        продуктів і бобових, а саме в них міститься велика кількість магнію2. Споживання добової дози магнію для хворих
-        на цукровий діабет є надзвичайно важливим для зменшення ризиків виникнення стійкого дефіциту цього елементу
-        та розвитку ускладнень, пов’язаних з цим станом.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>фізичні навантаження</b>
-        <p>
-        Магній необхідний для нормальної роботи м'язів. При збалансованому вмісті магнію в організмі забезпечується
-        рівновага між скороченням і розслабленням м'язів. Навіть при невеликому дефіциті магнію можливі порушення в
-        роботі м'язів, що призводять до судом, зокрема, до судом у литкових м'язах ніг<sup>2</sup>
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>мігрень</b>
-        <p>
-        У ході досліджень спостерігалось, що у пацієнтів, які страждають на мігрень, були знижені концентрації магнію.
-        Результати досліджень вказують на те, що прийом магнію може знизити частоту нападів мігрені<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>втома</b>
-        <p>
-        Якщо турбує постійна втома і пригніченість, можливо, організму не вистачає магнію. Адже магній сприяє зниженню
-        ступеня втоми та вираженого почуття виснаження<sup>2</sup>.
-        </p>
-    </div>
-
+<div class="block block-video">
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/7KY3E_MRHc0?loop=1;playlist=7KY3E_MRHc0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
-
 
 <div class="disclamer-materials">
     <p class="disclamer-title">Доказова база:</p>
     <ol>
-        <li>Рекомендована Німецьким товариством харчування добова доза магнію для жінок старше 25 років.</li>
-        <li>https://www.biolectra-magnesium.de/</li>
+        <li>Інструкції для медичного застосування Біолектра Магнезіум Фортіссімум, Форте и Дірект.</li>
+        <li>В.П. Міщенко, Інформаційний лист №1-2015, «Спосіб профілактики невиношування вагітності у жінок груп ризику», , МОЗ України, 2015</li>
+        <li>Г.І. Резніченко, «Ефективність препарату Біолектра Магнезіум Дірект при лікувально-профілактичних заходах у вагітних з прееклампсією», Здоров’я жінки №6, 2015</li>
+        <li>А. Я. Сенчук, «Лікування загрози переривання вагітності», Інформаційний лист МОЗ України, № 49/2 - 2016</li>
+        <li>А. Я. Сенчук, «Профілактика та лікування пізніх гестозів», Інформаційний лист МОЗ України, № 49/1 - 2016 * Застосування лікарського засобу у період годування груддю рекомендується після консультації з
+            лікарем та за призначенням лікаря Ексклюзивний дистриб’ютор: ПрАТ “Натурфарм”, вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03.</li>
     </ol>
     <p>Ексклюзивний дистриб’ютор: ПрАТ “Натурфарм”, вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Реклама нелікарських засобів. Перед застосуванням уважно ознайомтеся з
         інструкцією та проконсультуйтесь з лікарем. Зберігати в недоступному для дітей місці. Біолектра Магнезіум Фортіссімум: РП № 13697/01/01 від 02.10.2019. Біолектра Магнезіум Форте: РП № 13955/01/01
