--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -23,21 +23,21 @@
         <div id="menuToggle">
             <input type="checkbox"/> <span></span> <span></span> <span></span>
             <ul id="menu">
-                <li><a class="translated-text navmenu active" key="g1" href="index.html">Магній</a></li>
+                <li><a class="translated-text navmenu" key="g1" href="index.html">Магній</a></li>
                 <li><a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a></li>
-                <li><a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a></li>
+                <li><a class="translated-text navmenu active" key="g4" href="index-sport.html">Спорт</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="index-str.html">Стресс</a></li>
-<!--                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>-->
+                <!--                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>-->
                 <li><a class="translated-text navmenu lang" key="g6" href="#map">ru</a></li>
-<!--                <li><a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a></li>-->
-<!--                <li><a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a></li>-->
+                <!--                <li><a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a></li>-->
+                <!--                <li><a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a></li>-->
             </ul>
         </div>
     </div>
     <div class="desctop-navigation">
-        <a class="translated-text navmenu active" key="g1" href="index.html">Магній</a>
+        <a class="translated-text navmenu" key="g1" href="index.html">Магній</a>
         <a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a>
-        <a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a>
+        <a class="translated-text navmenu active" key="g4" href="index-sport.html">Спорт</a>
         <a class="translated-text navmenu" key="g4" href="index-str.html">Стресс</a>
 <!--        <a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a>-->
         <a class="translated-text navmenu  lang" key="g6" href="#map">ru</a>
@@ -52,79 +52,95 @@
 <!--  content-->
 <a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">КУПИТИ ЗА ВИГІДНОЮ ЦІНОЮ</a>
 
-<div class="block-1 block-1_main">
-<!--    <div class="block-1__content">-->
-<!--        <div class="content-container">-->
-<!--            <div class="content">-->
-<!--                <p><b>БІОЛЕКТРА</b> – для нормальної-->
-<!--                    вагітності, народження і-->
-<!--                    розвитку здорової дитини!</p>-->
-<!--                <div class="content-img"></div>-->
-<!--                <div class="text-2">-->
-<!--                    <p class="germ">Зроблено в Німеччині</p>-->
-<!--                    <p class="sub-text">Додаткове джерело магнію.</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="block-1__img"></div>-->
+<div class="block-1 block-1_sport">
+    <div class="block-1__content">
+        <div class="content-container">
+            <div class="content">
+                <p><b>БІОЛЕКТРА</b><br>
+                    тренувань багато - джерело магнію одне!</p>
+                <div class="content-img"></div>
+                <div class="text-2">
+                    <p class="germ">Зроблено в Німеччині</p>
+                    <p class="sub-text">Додаткове джерело магнію.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="block-1__img block-1__img-sport"></div>
     <div class="block-1__bottom">
         <img src="images/shap1.png">
     </div>
 </div>
 
-<div class="pack-main-text">
-    <div class="pack-main_img"></div>
-    <p>Магній - один з життєво необхідних хімічних елементів. Він є складовою частиною абсолютно всіх тканин і клітин
-        організму людини. Це незамінний мікроелемент, споживання якого необхідно забезпечувати щодня. Німецьким
-        товариством харчування (DGE) в якості добової норми споживання магнію для підлітків і дорослих рекомендовано
-        300-400 мг магнію<sup>1</sup>
-    </p>
+
+
+<div class="block block-2">
+    <div class="block-2__container">
+        <div class="block-2__plate">Добове джерело магнію</div>
+        <div class="block-2__plate">Зручно приймати: лише 1 раз на день<sup>1</sup></div>
+        <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>
+        <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>
+    </div>
 </div>
-
-
-
-<!--<div class="block block-2">-->
-<!--    <div class="block-2__container">-->
-<!--        <div class="block-2__plate">В 2 рази знижує частоту невиношування<sup>2</sup></div>-->
-<!--        <div class="block-2__plate">Зручно приймати: лише 1 раз на день<sup>1</sup></div>-->
-<!--        <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>-->
-<!--        <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>-->
-<!--    </div>-->
-<!--</div>-->
 <a name="block1"></a>
 
 <div class="block block-3">
-    <div class="block-3__container block-3__container-ru">
+    <div class="block-3__container">
         <div class="container">
             <div class="container__img"></div>
-            <div class="container__title"><p>Для майбутніх мам</p></div>
+            <div class="container__title"><p>При судомах</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>Ви інтенсивно займаєтесь спортом та Вас турбують судоми м’язів ніг? Майже кожного дня у Вас виникає це неприємне відчуття, коли зводить ноги? Мабуть, вашому організму бракує Магнію. Тільки при збалансованому вмісті Магнію в організмі забезпечується рівновага між скороченням і розслабленням м'язів.
+                </p>
+            </div>
         </div>
         <div class="container">
             <div class="container__img"></div>
-            <div class="container__title"><p>При занятті спортом</p></div>
+            <div class="container__title"><p>Під час тренування</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>У Вас погіршились спортивні результати? Чи знали Ви, що це може бути наслідком нестачі Магнію в організмі? Для досягнення максимальних спортивних результатів потрібно, щоб резерви Магнію в організмі були заповнені, і в клітинах м'язів було достатньо Магнію. Адже він важливий для енергообміну і сприяє зниженню стомлюваності.
+                </p>
+            </div>
         </div>
         <div class="container">
             <div class="container__img"></div>
-            <div class="container__title"><p>При стресі</p></div>
+            <div class="container__title"><p>Для гарного самопочуття</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <button class="accordion">Детальніше</button>
+            <div class="panel">
+                <p>Погане самопочуття при інтенсивних тренуваннях нерідке явище. Втома- також може бути сигналом дефіциту Магнію. Магній допоможе Вам зняти стрес та розслабитися. Важливо слідкувати за достатнім його споживанням та поповнювати депо у разі необхідності.
+                </p>
+            </div>
         </div>
     </div>
 </div>
 <a name="block2"></a>
 
 
-
+<div class="block block-4">
+    <p>Як діє Біолектра</p>
+    <p>при дефіциті магнію<sup>2</sup></p>
+    <div class="block-4__container">
+        <div class="container__img"></div>
+        <div class="container__list">
+            <ul>
+                <li>Зменшує ризик виникнення судом м’язів ніг</li>
+                <li>Підвищує продуктивність у спортсменів</li>
+                <li>Сприяє нормалізації енергообміну</li>
+                <li>Покращує самопочуття</li>
+            </ul>
+        </div>
+    </div>
+</div>
 <a name="block4"></a>
 
 
 <div class="block block-5">
-    <p>Знайди сфою форму Біолектри:</p>
+    <p>Форми Біолектри</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
@@ -210,69 +226,11 @@
     </div>
 </div>
 
-<div class="block-main_mag">
-    <h2>Магній та:</h2>
-    <div class="mag-plate">
-        <b>нервова система</b>
-        <p>
-        Коливання настрою, дратівливість та нервозність можуть бути наслідком недостатнього споживання магнію. Адже магній важливий для нормального функціонування нервової системи та має заспокійливу дію.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>здоров’я зубів та кісток</b>
-        <p>
-        Депо магнію в організмі людини становить близько 25 грам. Основна його частка - а саме 60% - знаходиться в
-        кістках та зубах. Тільки 39% знаходиться в м'язах та органах, приблизно 1% - в крові. Отже, достатнє вживання
-        магнію необхідно для підтримки кісток і зубів в здоровому стані<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>ПМС</b>
-        <p>
-        Достатнє споживання магнію може полегшити типові симптоми ПМС. Магній сприяє розслабленню мускулатури матки і, таким чином, може запобігти болю в животі перед і під час менструації<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>цукровий діабет</b>
-        <p>
-        Безліч досліджень показують, що у пацієнтів з діабетом 2-го типу концентрація магнію в крові знижена. Внаслідок
-        підвищеного рівня цукру в крові, відбувається посилене виведення магнію нирками, що є основною причиною
-        нестачі магнію в організмі. Крім того, хворі на діабет часто уникають споживання багатої вуглеводами їжі: зернові
-        продуктів і бобових, а саме в них міститься велика кількість магнію2. Споживання добової дози магнію для хворих
-        на цукровий діабет є надзвичайно важливим для зменшення ризиків виникнення стійкого дефіциту цього елементу
-        та розвитку ускладнень, пов’язаних з цим станом.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>фізичні навантаження</b>
-        <p>
-        Магній необхідний для нормальної роботи м'язів. При збалансованому вмісті магнію в організмі забезпечується
-        рівновага між скороченням і розслабленням м'язів. Навіть при невеликому дефіциті магнію можливі порушення в
-        роботі м'язів, що призводять до судом, зокрема, до судом у литкових м'язах ніг<sup>2</sup>
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>мігрень</b>
-        <p>
-        У ході досліджень спостерігалось, що у пацієнтів, які страждають на мігрень, були знижені концентрації магнію.
-        Результати досліджень вказують на те, що прийом магнію може знизити частоту нападів мігрені<sup>2</sup>.
-        </p>
-    </div>
-    <div class="mag-plate">
-        <b>втома</b>
-        <p>
-        Якщо турбує постійна втома і пригніченість, можливо, організму не вистачає магнію. Адже магній сприяє зниженню
-        ступеня втоми та вираженого почуття виснаження<sup>2</sup>.
-        </p>
-    </div>
-
-</div>
-
 
 <div class="disclamer-materials">
     <p class="disclamer-title">Доказова база:</p>
     <ol>
-        <li>Рекомендована Німецьким товариством харчування добова доза магнію для жінок старше 25 років.</li>
+        <li>Інструкції для медичного застосування Біолектра Магнезіум Фортіссімум, Форте и Дірект.</li>
         <li>https://www.biolectra-magnesium.de/</li>
     </ol>
     <p>Ексклюзивний дистриб’ютор: ПрАТ “Натурфарм”, вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Реклама нелікарських засобів. Перед застосуванням уважно ознайомтеся з
