--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -87,7 +87,7 @@
 <div class="block block-3">
     <div class="block-3__container">
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-str"></div>
             <div class="container__title"><p>Стрес</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-str"></div>
             <div class="container__title"><p>Втома</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-str"></div>
             <div class="container__title"><p>Нервозність</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
