--- a/bioelektra/index.html
+++ b/bioelektra/index.html
@@ -97,19 +97,19 @@
 <div class="block block-3">
     <div class="block-3__container block-3__container-ru">
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-main"></div>
             <div class="container__title"><p>Для майбутніх мам</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <a class="accordion accordion-ru">Детальніше</a>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-main"></div>
             <div class="container__title"><p>При занятті спортом</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <a class="accordion accordion-ru">Детальніше</a>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-main"></div>
             <div class="container__title"><p>При стресі</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <a class="accordion accordion-ru">Детальніше</a>
