--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -87,7 +87,7 @@
 <div class="block block-3">
     <div class="block-3__container">
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-sport"></div>
             <div class="container__title"><p>При судомах</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-sport"></div>
             <div class="container__title"><p>Під час тренування</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="container__img"></div>
+            <div class="container__img container__img-sport"></div>
             <div class="container__title"><p>Для гарного самопочуття</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
             <button class="accordion">Детальніше</button>
@@ -125,7 +125,7 @@
     <p>Як діє Біолектра</p>
     <p>при дефіциті магнію<sup>2</sup></p>
     <div class="block-4__container">
-        <div class="container__img"></div>
+        <div class="container__img container__img-sport"></div>
         <div class="container__list">
             <ul>
                 <li>Зменшує ризик виникнення судом м’язів ніг</li>
