--- a/bioelektra/index.html
+++ b/bioelektra/index.html
@@ -100,19 +100,19 @@
             <div class="container__img container__img-main"></div>
             <div class="container__title"><p>Для майбутніх мам</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <a href="index-pre.html" class="accordion accordion-ru">Детальніше</a>
         </div>
         <div class="container">
             <div class="container__img container__img-main"></div>
             <div class="container__title"><p>При занятті спортом</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <a href="index-sport.html" class="accordion accordion-ru">Детальніше</a>
         </div>
         <div class="container">
             <div class="container__img container__img-main"></div>
             <div class="container__title"><p>При стресі</p></div>
 <!--            <div class="container__btn"><p>Детальніше</p></div>-->
-            <a class="accordion accordion-ru">Детальніше</a>
+            <a href="index-str.html" class="accordion accordion-ru">Детальніше</a>
         </div>
     </div>
 </div>
