--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -50,7 +50,7 @@
 </div>
 
 <!--  content-->
-<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">КУПИТИ ЗА ВИГІДНОЮ ЦІНОЮ</a>
+<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">де купити</a>
 
 <div class="block-1 block-1_sport">
     <div class="block-1__content">
@@ -58,10 +58,10 @@
             <div class="content">
                 <p><b>БІОЛЕКТРА</b><br>
                     тренувань багато - джерело магнію одне!</p>
-                <div class="content-img"></div>
+                <div class="content-img content-img-str"></div>
                 <div class="text-2">
                     <p class="germ">Зроблено в Німеччині</p>
-                    <p class="sub-text">Додаткове джерело магнію.</p>
+<!--                    <p class="sub-text">Додаткове джерело магнію.</p>-->
                 </div>
             </div>
         </div>
@@ -139,8 +139,56 @@
 <a name="block4"></a>
 
 
+
+<div class="block block-7">
+    <div class="block-7__container">
+        <div class="plate">
+            <div class="plate__img"></div>
+            <div class="plate__title">
+                <p><b>Біолектра магнезіум фортіссімум</b></p>
+                <p>365 мг іонів магнію</p>
+            </div>
+            <div class="plate__btn">
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="">Інструкція</a>
+            </div>
+        </div>
+        <div class="plate">
+            <div class="plate__img"></div>
+            <div class="plate__title">
+                <p><b>Біолектра магнезіум форте</b></p>
+                <p>243 мг іонів магнію</p>
+            </div>
+            <div class="plate__btn">
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="./instruction.pdf">Інструкція</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<a name="block5"></a>
+
+
+<div class="block block-8">
+    <div class="block-8__container">
+        <div class="container">
+            <div class="container__img"></div>
+            <div class="container__text">
+                <p><b>Як приймати:</b></p>
+                <p>Таблетку необхідно розчинити у склянці води,<br>
+                    отриманий розчин випити<sup>1</sup></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <div class="block block-5">
-    <p>Форми Біолектри</p>
+    <p>Знайди сфою форму Біолектри:</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
@@ -151,7 +199,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -164,13 +212,19 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
     </div>
 </div>
-<a name="block5"></a>
+
+
+
+
+
+
+
 
 
 <div class="block block-6">
@@ -186,45 +240,10 @@
     </div>
 </div>
 
-<div class="block block-7">
-    <div class="block-7__container">
-        <div class="plate">
-            <div class="plate__img"></div>
-            <div class="plate__title">
-                <p><b>Біолектра магнезіум фортіссімум</b></p>
-                <p>365 мг іонів магнію</p>
-            </div>
-            <div class="plate__btn">
-                <a href="">Де купити</a>
-                <a href="">Інструкція</a>
-            </div>
-        </div>
-        <div class="plate">
-            <div class="plate__img"></div>
-            <div class="plate__title">
-                <p><b>Біолектра магнезіум форте</b></p>
-                <p>243 мг іонів магнію</p>
-            </div>
-            <div class="plate__btn">
-                <a href="">Де купити</a>
-                <a href="">Інструкція</a>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="block block-8">
-    <div class="block-8__container">
-        <div class="container">
-            <div class="container__img"></div>
-            <div class="container__text">
-                <p><b>Як приймати:</b></p>
-                <p>Таблетку необхідно розчинити у склянці води,<br>
-                    отриманий розчин випити<sup>1</sup></p>
-            </div>
-        </div>
-    </div>
-</div>
+
+
+
 
 
 <div class="disclamer-materials">
