--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -50,7 +50,7 @@
 </div>
 
 <!--  content-->
-<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">КУПИТИ ЗА ВИГІДНОЮ ЦІНОЮ</a>
+<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">де купити</a>
 
 <div class="block-1 block-1_str">
     <div class="block-1__content">
@@ -58,10 +58,10 @@
             <div class="content">
                 <p><b>БІОЛЕКТРА</b><br>
                     джерело Вашого спокою!</p>
-                <div class="content-img"></div>
+                <div class="content-img content-img-str"></div>
                 <div class="text-2">
                     <p class="germ">Зроблено в Німеччині</p>
-                    <p class="sub-text">Додаткове джерело магнію.</p>
+<!--                    <p class="sub-text">Додаткове джерело магнію.</p>-->
                 </div>
             </div>
         </div>
@@ -150,7 +150,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 <p>365 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="">Інструкція</a>
             </div>
         </div>
@@ -205,8 +205,8 @@
                 <p>243 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
-                <a href="">Інструкція</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
     </div>
