--- a/bioelektra/index-pre.html
+++ b/bioelektra/index-pre.html
@@ -50,7 +50,7 @@
 </div>
 
 <!--  content-->
-<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">КУПИТИ ЗА ВИГІДНОЮ ЦІНОЮ</a>
+<a class="fixed-link" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">де купити</a>
 
 <div class="block-1">
     <div class="block-1__content">
@@ -144,7 +144,7 @@
 
 
 <div class="block block-5">
-    <p>Форми Біолектри</p>
+    <p>Знайди сфою форму Біолектри:</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
@@ -155,7 +155,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -168,7 +168,7 @@
                     судом (в тому числі для вагітних та годуючих*)</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
@@ -199,7 +199,7 @@
                 <p>365 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
                 <a href="">Інструкція</a>
             </div>
         </div>
@@ -210,8 +210,8 @@
                 <p>243 мг іонів магнію</p>
             </div>
             <div class="plate__btn">
-                <a href="">Де купити</a>
-                <a href="">Інструкція</a>
+                <a href="https://liki24.com/checkout/?utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
+                <a href="./instruction.pdf">Інструкція</a>
             </div>
         </div>
     </div>
@@ -231,7 +231,7 @@
 </div>
 
 <div class="block block-video">
-    <iframe width="100%" height="500" src="https://www.youtube.com/embed/7KY3E_MRHc0?loop=1;playlist=7KY3E_MRHc0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/ET2aNMTrcfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="disclamer-materials">
