--- a/influcid/index.html
+++ b/influcid/index.html
@@ -20,9 +20,9 @@
 	<header class="App-header">
 
 
-
+        <a name='block-nav'></a>
         <div class="navigation-logo">
-          <a  href="index.html" class="logo">Iнфлюцид</a>
+          <a  href="#block-nav" class="logo">Iнфлюцид</a>
           <a class="where-to-buy where-to-buy__desktop" href="#block-5">Де купити</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
