--- a/influcid/index.html
+++ b/influcid/index.html
@@ -78,7 +78,7 @@
         <h2>ПЕРЕВАГИ</h2>
         <div class="block-1__text">
           <p>
-            Швидко зупиняє типові ознаки застуди гострої інфекції дихальних шляхів¹
+            Швидко зупиняє типові ознаки застуди¹
           </p>
           <p>
             Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючi, краплi в ніс, препарати від кашлю)²
