--- a/bioelektra/index.html
+++ b/bioelektra/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="plate__btn">
                 <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43834&utm_source=biolektra-orange&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
-                <a href="./instruction.pdf">Інструкція</a>
+                <a href="./citrus.pdf">Інструкція</a>
             </div>
         </div>
         <div class="plate">
@@ -149,7 +149,7 @@
             </div>
             <div class="plate__btn">
                 <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43832&utm_source=biolektra-lime&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
-                <a href="./instruction.pdf">Інструкція</a>
+                <a href="./lemon.pdf">Інструкція</a>
             </div>
         </div>
     </div>
@@ -180,7 +180,7 @@
             </div>
             <div class="plate__btn">
                 <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43835&utm_source=biolektra-fortissimum&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
-                <a href="">Інструкція</a>
+                <a href="./MAGNESIUM FORTISSIMUM.pdf">Інструкція</a>
             </div>
         </div>
         <div class="plate">
@@ -191,7 +191,7 @@
             </div>
             <div class="plate__btn">
                 <a href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=43836&utm_source=biolektra-forte&utm_medium=referral&utm_campaign=biolektra">Де купити</a>
-                <a href="./instruction.pdf">Інструкція</a>
+                <a href="./MAGNESIUM FORTE.pdf">Інструкція</a>
             </div>
         </div>
     </div>
