--- a/bioelektra/index-pre.html
+++ b/bioelektra/index-pre.html
@@ -144,7 +144,7 @@
 
 
 <div class="block block-5">
-    <p>Знайди сфою форму Біолектри:</p>
+    <p>Знайди свою форму Біолектри:</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
