--- a/trachisan/index.html
+++ b/trachisan/index.html
@@ -59,7 +59,7 @@
   <a name="t1"></a>
 </div> -->
 <div class="block-six">
-    <video controls="controls">
+    <video controls="controls" muted autoplay="autoplay">
       <source src="./video/!Trach2019-Pogoda-7s-RP6121.mp4" >
     </video>
   </div>
