--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -26,9 +26,9 @@
                 <li><a class="translated-text navmenu" key="g1" href="index.html">Магній</a></li>
                 <li><a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a></li>
-                <li><a class="translated-text navmenu active" key="g4" href="index-str.html">Стресс</a></li>
+                <li><a class="translated-text navmenu active" key="g4" href="index-str.html">Стрес</a></li>
                 <!--                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>-->
-                <li><a class="translated-text navmenu lang" key="g6" href="#map">ru</a></li>
+                <!-- <li><a class="translated-text navmenu lang" key="g6" href="#map">ru</a></li> -->
                 <!--                <li><a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a></li>-->
                 <!--                <li><a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a></li>-->
             </ul>
@@ -38,9 +38,9 @@
         <a class="translated-text navmenu" key="g1" href="index.html">Магній</a>
         <a class="translated-text navmenu" key="g2" href="index-pre.html">Вагiтнiсть</a>
         <a class="translated-text navmenu" key="g4" href="index-sport.html">Спорт</a>
-        <a class="translated-text navmenu active" key="g4" href="index-str.html">Стресс</a>
+        <a class="translated-text navmenu active" key="g4" href="index-str.html">Стрес</a>
 <!--        <a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a>-->
-        <a class="translated-text navmenu  lang" key="g6" href="#map">ru</a>
+        <!-- <a class="translated-text navmenu  lang" key="g6" href="#map">ru</a> -->
 <!--        <a class="translated-text navmenu fb" key="g7" href="https://www.facebook.com/Biolectra/?eid=ARDpLFSR7Eh0SE-ea6V_unLggG2Qi04sBPJcOunEK8R-Ht5yxr0njMHbNldgTO0ZhRUH0bSBZjup82yd"></a>-->
 <!--        <a class="translated-text navmenu inst" key="g7" href="https://www.instagram.com/biolectra.com.ua/?hl=ru"></a>-->
     </div>
