--- a/isla/index.html
+++ b/isla/index.html
@@ -63,11 +63,13 @@
                     <p>В Німеччині<br>
                         з 1868 року<sup>1</sup></p>
                 </div>
+                <a href='https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=50234&utm_source=isla-moos&utm_medium=referral&utm_campaign=isla&t=pickup&h=1' class="plate__btn"><p>Де купити</p></a>
             </div>
             <div class="plate">
                 <div class="plate__img">
                     <p>Без цукру</p>
                 </div>
+                <a href='https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=50235&utm_source=isla-mint&utm_medium=referral&utm_campaign=isla&t=pickup&h=1' class="plate__btn"><p>Де купити</p></a>
             </div>
         </div>
         <div class="block-2__list">
