--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -17,6 +17,13 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+<div class="alert-license">
+  <a href="license.html">
+    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
+  </a>
+  <button class="license-off"><p>Slažem se</p></button>
+</div>
+
 	<header class="App-header">
 
 
