--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<a href="influcid-EN/index.html">influcid-EN</a>
 			<a href="Alpikol-HR/index.html">Alpikol-HR</a>
 			<a href="gastritol-V2/index.html">gastritol-V2</a>
+			<a href="KlimaktoplanV2/index.html">KlimaktoplanV2</a>
 		</section>
 	</main>
 
@@ -111,6 +112,9 @@
 	}
 	a:nth-child(17)::before {
 		background: url("./gastritol-V2/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(18)::before {
+		background: url("./KlimaktoplanV2/bg.png")no-repeat center / cover;
 	}
 </style>
 
