biolektra + klim-mobile

--- a/KlimaktoplanV2/index.html
+++ b/KlimaktoplanV2/index.html
@@ -50,6 +50,8 @@
   </div>
   <div class="header-container__new-woman"></div>
   <a name="k1"></a>
+  <div class="mobile__top-block"></div>
+  <div class="mobile__new-woman"></div>
 </div>
 
 
@@ -57,6 +59,9 @@
   <div class="second-container__text">
     <h1>Климактоплан Н</h1>
     <p>ДЛЯ ОБЛЕГЧЕНИЯ ОСНОВНЫХ ПРОЯВЛЕНИЙ КЛИМАКСА</p>
+    <div class="mobile__pack">
+      <div class="mobile__pack-box"></div>
+    </div>
 <!--    <h4>ДОКАЗАНО — ЭФФЕКТИВНО УСТРАНЯЕТ</h4>-->
 <!--    <h4 class="second-container__color-text">БОЛЬШЕ 25 СИМПТОМОВ КЛИМАКСА</h4>-->
     <div class="second-container__block">
