--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<a href="influcid-RU/index.html">influcid-RU</a>
 			<a href="influcid-BY/index.html">influcid-BY</a>
 			<a href="influcid-AZ/index.html">influcid-AZ</a>
+			<a href="influcid-KZ/index.html">influcid-AZ</a>
 		</section>
 	</main>
 
@@ -131,6 +132,9 @@
 	}
 	a:nth-child(22)::before {
 		background: url("./influcid-AZ/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(23)::before {
+		background: url("./influcid-KZ/bg.png")no-repeat center / cover;
 	}
 </style>
 
