--- a/gastritol-V2/index.html
+++ b/gastritol-V2/index.html
@@ -81,8 +81,8 @@
   <a name="diagnosis"></a>
   <div class="diagnosis">
     <div class="diagnosis-container">
-      <div class="diagnosis-img"></div>
-        <p class="made-in overrun-trigger translated-text" key="g9">Зроблено<br>в Німеччині</p>
+      <!-- <div class="diagnosis-img"></div> -->
+        <!-- <p class="made-in overrun-trigger translated-text" key="g9">Зроблено<br>в Німеччині</p> -->
         <h2 class="translated-text" key="g7-1">СИМПТОМИ<sup>**</sup></h2>
         <div class="diagnosis-container__symptoms">
             <div><p>здуття</p></div>
