--- a/gastritol-V2/index_ru.html
+++ b/gastritol-V2/index_ru.html
@@ -62,8 +62,8 @@
   <a name="diagnosis"></a>
   <div class="diagnosis">
     <div class="diagnosis-container">
-      <div class="diagnosis-img"></div>
-        <p class="made-in overrun-trigger translated-text" key="g9">Сделано<br>в Германии</p>
+      <!-- <div class="diagnosis-img"></div> -->
+        <!-- <p class="made-in overrun-trigger translated-text" key="g9">Сделано<br>в Германии</p> -->
         <h2 class="translated-text" key="g7-1">СИМПТОМЫ<sup>**</sup></h2>
         <div class="diagnosis-container__symptoms">
             <div><p>вздутие</p></div>
