--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -448,9 +448,14 @@
             <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
             <!--            </ol>-->
             <p>
-              Реклама лекарственного препарата. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Инфлюцид таб. Р.С. № ___________________.
-              <br>
-              Эксклюзивный дистрибьютор: ____________________________.
+              Официальный представитель в России:<br>
+ООО “Альпен Фарма”<br>
+117513, г. Москва, ул. Островитянова, д.6<br>
+Тел./факс: +7 (495) 609-65-72<br>
+www.alpenpharma.com info.russia@alpenpharma.com<br>
+ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ
+
+
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
@@ -458,7 +463,7 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
+            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ВРЕДНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
           </div>
 
 
